--- a/src/app/modules/blue/blue.component.scss
+++ b/src/app/modules/blue/blue.component.scss
@@ -2,3 +2,18 @@
     margin-left: 5px;
     margin-right: 5px;
 }
+
+table {
+    margin-top: 15px;
+    width: 100%;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  td, th {
+    width: 15%;
+  }
+
