--- a/src/app/modules/blue/components/detalhes-atividade/detalhes-atividade.component.html
+++ b/src/app/modules/blue/components/detalhes-atividade/detalhes-atividade.component.html
@@ -1,12 +1,10 @@
-<mat-dialog-content class="content" >
-
-  <form [formGroup]="formGroup" class="form">
-
-    <mat-form-field class="formField-Atividade" appearance="outline">
-      <mat-label>Atividade</mat-label>
-      <input formControlName="atividade" matInput id="atividade" />
-    </mat-form-field>
-
+<form [formGroup]="formGroup" class="form">
+  <mat-form-field class="formField-Atividade" appearance="outline">
+    <mat-label>Atividade</mat-label>
+    <input formControlName="atividade" matInput id="atividade" />
+  </mat-form-field>
+  <br>
+  <div>
     <mat-form-field class="formField-Linguagem" appearance="outline">
       <mat-label>Linguagem</mat-label>
       <mat-select formControlName="linguagem" matInput id="linguagem" multiple>
@@ -15,22 +13,23 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <div >
+    
       <mat-form-field class="formField-Data" appearance="outline">
         <mat-label>Data</mat-label>
         <input formControlName="data" matInput id="data" />
       </mat-form-field>
-    </div>
-   
-    <button mat-fab aria-label="Example icon button with a bookmark icon">
-      <mat-icon>file_open</mat-icon>
-    </button>
-  </form>
-</mat-dialog-content>
-<div mat-dialog-actions class="botao">
-  <button mat-button (click)="cadastrar()">Ok</button>
+  </div>
+ 
+  <!-- <button mat-fab aria-label="Example icon button with a bookmark icon">
+    <mat-icon>folder</mat-icon>
+  </button> -->
+
+  <mat-form-field class="formField-Arquivos" appearance="outline">
+    <ngx-mat-file-input placeholder="Selecione os arquivos" formControlName="acceptfile" [multiple]="multiple">
+    </ngx-mat-file-input>
+ </mat-form-field>
+ <div class="botao">
+  <button mat-button (click)="onClose()">Cadastrar</button>
 </div>
+</form>
 
-{{myfilename}}
-
-<input type="file" id="fileUpload" (change)="fileChangeEvent($event)" name="fileUpload" multiple="multiple" />
